Add main menu and game mode structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,78 @@
     <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
   <body>
-    
-    
+    <div class="title-section">
+      <h1>Tic Tac Toe</h1>
+      <button>Play</button>
+    </div>
+
+    <div class="game-mode">
+      <div class="x">
+        <label for="x">X</label>
+        <input
+          type="text"
+          placeholder="Enter name"
+          required
+          autocomplete="off"
+        />
+        <ul>
+          <li>
+            <input type="radio" name="x-type" id="bot" value="bot" />
+            <label for="bot">
+              bot
+              <img src="./assets/images/bot.svg" alt="bot icon" />
+            </label>
+          </li>
+          <li>
+            <input
+              type="radio"
+              name="x-type"
+              id="player"
+              value="player"
+              checked
+            />
+            <label for="player">
+              player
+              <img src="./assets/images/player.svg" alt="player icon" />
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="o">
+        <label for="o">O</label>
+        <input
+          type="text"
+          placeholder="Enter name"
+          required
+          autocomplete="off"
+        />
+        <ul>
+          <li>
+            <input type="radio" name="o-type" id="bot" value="bot" />
+            <label for="bot">
+              bot
+              <img src="./assets/images/bot.svg" alt="bot icon" />
+            </label>
+          </li>
+          <li>
+            <input
+              type="radio"
+              name="o-type"
+              id="player"
+              value="player"
+              checked
+            />
+            <label for="player">
+              player
+              <img src="./assets/images/player.svg" alt="player icon" />
+            </label>
+          </li>
+        </ul>
+      </div>
+
+      <button>Start</button>
+    </div>
 
     <script src="./assets/src/tictactoe.js"></script>
   </body>
