Add a section class to main divs

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
   <body>
-    <div class="title-section">
+    <div class="title section">
       <h1>Tic Tac Toe</h1>
       <button>Play</button>
     </div>
 
-    <div class="game-mode">
+    <div class="game-mode section">
       <div class="x">
         <label for="x">X</label>
         <input
