Change the button content to an svg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="title section">
       <h1>Tic Tac Toe</h1>
-      <button>Play</button>
+      <button>
+        <img src="./assets/images/play-button.svg" alt="Play Button" width="145" height="65">
+      </button>
     </div>
 
     <div class="game-mode section">
