--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
   <body>
-    <div class="title section" >
+    <div class="title section">
       <h1>Tic Tac Toe</h1>
-      <button>
+      <button id="playButton">
         <img
           src="./assets/images/play-button.svg"
           alt="Play Button"
@@ -20,116 +20,121 @@
       </button>
     </div>
 
-    <div class="game-mode section" >
-      <div class="x">
-        <label for="x">X</label>
-        <div class="text-input">
-          <input
-            type="text"
-            placeholder="Enter name"
-            required
-            autocomplete="off"
-          />
-        </div>
-        <ul>
-          <li>
-            <input type="radio" name="x-type" id="x-bot" value="bot" />
-            <label for="x-bot">
-              bot
-              <img
-                src="./assets/images/bot.svg"
-                width="30"
-                height="50"
-                alt="bot icon"
-              />
-            </label>
-          </li>
-          <li>
+    <div class="game-mode section">
+      <form id="modeForm">
+        <div class="x">
+          <label for="x">X</label>
+          <div class="text-input">
             <input
-              type="radio"
-              name="x-type"
-              id="x-player"
-              value="player"
-              checked
+              type="text"
+              placeholder="Enter name"
+              required
+              autocomplete="off"
+              id="x-name"
+              maxlength="12"
             />
-            <label for="x-player">
-              player
-              <img
-                src="./assets/images/player.svg"
-                width="30"
-                height="50"
-                alt="player icon"
+          </div>
+          <ul id="xRadioList">
+            <li>
+              <input type="radio" name="x-type" id="x-bot" value="bot" />
+              <label for="x-bot">
+                bot
+                <img
+                  src="./assets/images/bot.svg"
+                  width="30"
+                  height="50"
+                  alt="bot icon"
+                />
+              </label>
+            </li>
+            <li>
+              <input
+                type="radio"
+                name="x-type"
+                id="x-player"
+                value="player"
+                checked
               />
-            </label>
-          </li>
-        </ul>
-      </div>
-
-      <div class="o">
-        <label for="o">O</label>
-        <div class="text-input">
-          <input
-            type="text"
-            placeholder="Enter name"
-            required
-            autocomplete="off"
-          />
+              <label for="x-player">
+                player
+                <img
+                  src="./assets/images/player.svg"
+                  width="30"
+                  height="50"
+                  alt="player icon"
+                />
+              </label>
+            </li>
+          </ul>
         </div>
-        <ul>
-          <li>
-            <input type="radio" name="o-type" id="o-bot" value="bot" />
-            <label for="o-bot">
-              bot
-              <img
-                src="./assets/images/bot.svg"
-                width="30"
-                height="50"
-                alt="bot icon"
-              />
-            </label>
-          </li>
-          <li>
-            <input
-              type="radio"
-              name="o-type"
-              id="o-player"
-              value="player"
-              checked
-            />
-            <label for="o-player">
-              player
-              <img
-                src="./assets/images/player.svg"
-                width="30"
-                height="50"
-                alt="player icon"
-              />
-            </label>
-          </li>
-        </ul>
-      </div>
 
-      <button>
+        <div class="o">
+          <label for="o">O</label>
+          <div class="text-input">
+            <input
+              type="text"
+              placeholder="Enter name"
+              required
+              autocomplete="off"
+              id="o-name"
+              maxlength="12"
+            />
+          </div>
+          <ul id="oRadioList">
+            <li>
+              <input type="radio" name="o-type" id="o-bot" value="bot" />
+              <label for="o-bot">
+                bot
+                <img
+                  src="./assets/images/bot.svg"
+                  width="30"
+                  height="50"
+                  alt="bot icon"
+                />
+              </label>
+            </li>
+            <li>
+              <input
+                type="radio"
+                name="o-type"
+                id="o-player"
+                value="player"
+                checked
+              />
+              <label for="o-player">
+                player
+                <img
+                  src="./assets/images/player.svg"
+                  width="30"
+                  height="50"
+                  alt="player icon"
+                />
+              </label>
+            </li>
+          </ul>
+        </div>
+      </form>
+      <button type="submit" form="modeForm" id="startButton">
         <img src="./assets/images/start-button.svg" alt="Start Button" />
       </button>
     </div>
 
-    <div class="game section">
+    <div class="game section" style="display: flex;">
       <div class="x-player">
-        <p id="x-score">0</p>
-        <p id="x-player-name">zen (x)</p>
+        <p id="x-score"></p>
+        <p id="x-player-name"></p>
       </div>
 
       <div class="board" id="board"></div>
       <div class="o-player">
-        <p id="o-player-name">zen (o)</p>
-        <p id="o-score">0</p>
+        <p id="o-player-name"></p>
+        <p id="o-score"></p>
       </div>
     </div>
 
-    <dialog class="modal">
+    <dialog id="game-modal" class="modal">
       <div class="modal-container">
-        <p>zen (x) wins!</p>
+        <p id="verdict"></p>
         <div class="buttons">
           <button>
             <img src="./assets/images/new-game.svg" alt="New Game Button" />
@@ -141,6 +146,7 @@
       </div>
     </dialog>
 
+    <script src="./assets/src/script.js"></script>
     <script src="./assets/src/tictactoe.js"></script>
   </body>
 </html>
